// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should render a bullet point 1`] = `
<li
  class="Text__root Text__standard Text__bullet Text__baseline"
>
  <span
    class=""
  >
    Hello
  </span>
</li>
`;

exports[`Text should render with a custom component 1`] = `
<div
  class="Text__root Text__standard Text__baseline"
>
  <span
    class=""
  >
    Hello
  </span>
</div>
`;

exports[`Text should render with defaults 1`] = `
<span
  class="Text__root Text__standard Text__baseline"
>
  <span
    class=""
  >
    Hello
  </span>
</span>
`;

exports[`Text sizes should render as heading 1`] = `
<span
  class="Text__root Text__heading Text__baseline"
>
  <span
    class=""
  >
    Hello
  </span>
</span>
`;

exports[`Text sizes should render as heading 2`] = `
<span
  class="Text__root Text__heading Text__baseline"
>
  <span
    class=""
  >
    Hello
  </span>
</span>
`;

exports[`Text sizes should render as headline 1`] = `
<span
  class="Text__root Text__headline Text__baseline"
>
  <span
    class=""
  >
    Hello
  </span>
</span>
`;

exports[`Text sizes should render as headline 2`] = `
<span
  class="Text__root Text__headline Text__baseline"
>
  <span
    class=""
  >
    Hello
  </span>
</span>
`;

exports[`Text sizes should render as hero 1`] = `
<span
  class="Text__root Text__hero Text__baseline"
>
  <span
    class=""
  >
    Hello
  </span>
</span>
`;

exports[`Text sizes should render as hero 2`] = `
<span
  class="Text__root Text__hero Text__baseline"
>
  <span
    class=""
  >
    Hello
  </span>
</span>
`;

exports[`Text sizes should render as large 1`] = `
<span
  class="Text__root Text__large Text__baseline"
>
  <span
    class=""
  >
    Hello
  </span>
</span>
`;

exports[`Text sizes should render as large 2`] = `
<span
  class="Text__root Text__large Text__baseline"
>
  <span
    class=""
  >
    Hello
  </span>
</span>
`;

exports[`Text sizes should render as small 1`] = `
<span
  class="Text__root Text__small Text__baseline"
>
  <span
    class=""
  >
    Hello
  </span>
</span>
`;

exports[`Text sizes should render as small 2`] = `
<span
  class="Text__root Text__small Text__baseline"
>
  <span
    class=""
  >
    Hello
  </span>
</span>
`;

exports[`Text sizes should render as standard 1`] = `
<span
  class="Text__root Text__standard Text__baseline"
>
  <span
    class=""
  >
    Hello
  </span>
</span>
`;

exports[`Text sizes should render as standard 2`] = `
<span
  class="Text__root Text__standard Text__baseline"
>
  <span
    class=""
  >
    Hello
  </span>
</span>
`;

exports[`Text sizes should render as subheading 1`] = `
<span
  class="Text__root Text__subheading Text__baseline"
>
  <span
    class=""
  >
    Hello
  </span>
</span>
`;

exports[`Text sizes should render as subheading 2`] = `
<span
  class="Text__root Text__subheading Text__baseline"
>
  <span
    class=""
  >
    Hello
  </span>
</span>
`;
